data/derived/fa15/progs/unify/prog2843.ml.out
Characters 81-83:
  | Sine(e1)  -> sin(pi * eval e1)
                     ^^
Error: This expression has type float but an expression was expected of type
         int
